--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@fortawesome/free-brands-svg-icons": "^5.15.3",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@fortawesome/vue-fontawesome": "^2.0.2",
+		"@gridsome/plugin-google-analytics": "^0.1.2",
 		"@gridsome/source-graphql": "^0.1.0",
 		"@tailwindcss/typography": "^0.2.0",
 		"babel-runtime": "^6.26.0",
