--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 		"@fortawesome/free-brands-svg-icons": "^5.15.3",
 		"@fortawesome/free-solid-svg-icons": "^5.15.3",
 		"@fortawesome/vue-fontawesome": "^2.0.2",
-		"@gridsome/plugin-google-analytics": "^0.1.2",
 		"@gridsome/source-graphql": "^0.1.0",
 		"@tailwindcss/typography": "^0.2.0",
 		"babel-runtime": "^6.26.0",
@@ -21,6 +20,7 @@
 		"moment": "^2.29.1",
 		"tailwindcss": "^1.6.2",
 		"typeface-fira-sans": "^1.1.13",
-		"vue-markdown": "^2.2.4"
+		"vue-markdown": "^2.2.4",
+		"vue-scroll-reveal": "^1.0.11"
 	}
 }
