--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 		"babel-runtime": "^6.26.0",
 		"gridsome": "^0.7.0",
 		"gridsome-plugin-tailwindcss": "^3.0.1",
+		"gridsome-scroll-reveal": "^1.0.11",
 		"moment": "^2.29.1",
 		"tailwindcss": "^1.6.2",
 		"typeface-fira-sans": "^1.1.13",
-		"vue-markdown": "^2.2.4",
-		"vue-scroll-reveal": "^1.0.11"
+		"vue-markdown": "^2.2.4"
 	}
 }
